[package]
name = "valut39_wasm_pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20 = "0.9.1"
bs58 = "0.5.0"
generic-array = "0.14.7"
typenum = "1.16.0"
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"

[lib]
crate-type = ["cdylib"]
